Fix backlog and dark mode sidebar

--- a/src/tc-renderer/ng/elements/chat-output/chat-output.css
+++ b/src/tc-renderer/ng/elements/chat-output/chat-output.css
@@ -81,13 +81,13 @@ chat-output .highlighted {
 }
 
 chat-output .whisper {
-  padding-left: 15px;
+  padding-left: 5px;
   border-left: 2px solid rgba(166, 142, 210, 0.46);;
   background-color: rgba(255, 174, 0, 0.15);
 }
 
 chat-output .from-backlog {
-  padding-left: 15px;
+  padding-left: 5px;
   border-left: 2px solid rgba(140, 162, 207, 0.46);
 }
 
